# SyrDB

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: build.yml
_admin/languages/: ru_RU.yml
_setup/templates/: config.yml
i18n/: CONTRIBUTING_ru.md  README_ru.md
install/: windows.ps1
specification/ru_RU/: protocol.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  README.md  logger.cpp  logger.h
src/core/managers/: CMakeLists.txt  task.cpp  task.h  task_manager.cpp  task_manager.h
src/core/managers/task_manager/: CMakeLists.txt  manager.cpp  manager.h  task.cpp  task.h
src/libs/: binary.cpp  binary.h  stringutils.cpp  stringutils.h
src/panel/assets/styles/: main.css
src/panel/assets/styles/components/: card.css
src/panel/assets/styles/pages/: index.css
src/panel/pages/: index.html
src/resources/: app.rc  verinfo.h  verinfo.h.in
src/types/: CMakeLists.txt  dictionary.cpp  dictionary.h
src/utils/: CMakeLists.txt  binary.cpp  binary.h  string.cpp  string.h  stringutils.cpp  stringutils.h
tests/: CMakeLists.txt
